[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colab-mcp-sync"
version = "0.1.0"
description = "An MCP Server to interact directly with Google Colab Notebooks on Google Drive"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "mcp",
]

[project.scripts]
colab-mcp = "mcp_server.server:mcp.run"

[tool.setuptools.packages.find]
include = ["cli", "mcp_server"]
